# scaleGANN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: buildGGNN.sh  executeDiskDirectPartition.cpp  executeDiskMerge.cpp  executeDiskPartition.cpp  executeMemoryMerge.cpp  executeMemoryPartition.cpp  searchCAGRA.cpp  searchDiskANN.cpp  searchDiskCAGRA.cpp  searchGGNN.cpp  searchScaleGANN.cpp
apps/diskann/: build.cpp  merge.cpp  partition.cpp
src/: CMakeLists.txt
src/build_index/: AssignByShardID.sh  generateConfig.sh  rmm_log.txt  sift100M.json  simSearchNet100M.json  testLaion.sh
src/diskANN/: cached_io.h  partition_disk.cpp
src/indexBuild/: AssignByAvailGPU.sh  SequentialAssign.sh  generateConfig.sh  rmm_log.txt
src/merge/: disk_merge.cpp  disk_merge.h  merge.cpp  merge.cu  merge.cuh  merge.hpp
src/partition/: AtomicWrapper.hpp  disk_partition.cpp  disk_partition.h  kmeans.cpp  kmeans.cu  kmeans.cuh  kmeans.h  partition.cpp  partition.h  resize.cpp
src/scheduler/: gpuManagement.cpp  scheduler.cpp
src/search/: disann.txt  disk_search.cpp  disk_search.h  getHotNodes.cpp  priorityList.hpp  search.cpp  search.hpp  searchCAGRA.cpp  searchGGNN.cpp  searchOurDesign.cpp  searchScaleGANN.cpp  testCAGRA  testGGNN  testOurDesign  testSearch
src/taskScheduler/: executeDiskPartition.cpp  executeMemoryMerge.cpp  executeMemoryPartition.cpp  gpuManagement.h  scheduler.cpp
src/utils/: bin_to_vecs.py  data_process.py  datasetIO.cpp  datasetIO.hpp  distance.cpp  distance.h  fileUtils.h  indexIO.cpp  indexIO.hpp  npy_to_bin.py  npy_to_vecs.py
